--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -12,9 +12,9 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
-mips = { git = "$HOME/Documents/Vidya/Stationeers/mips-myps" }
-myps = { git = "$HOME/Documents/Vidya/Stationeers/mips-myps" }
-translator = { git = "$HOME/Documents/Vidya/Stationeers/mips-myps" }
+mips = { path = "mips-myps/mips" }
+myps = { path = "mips-myps/myps" }
+translator = { path = "mips-myps/translator" }
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
