--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "core-js": "^3.6.5",
+        "core-js": "^3.16",
         "lodash": "^4.17.21",
-        "vue": "^3.0.0"
+        "vue": "^3.0.0",
+        "vue3-markdown-it": "^1.0.9"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
@@ -19,8 +20,14 @@
         "@vue/compiler-sfc": "^3.0.0",
         "@wasm-tool/wasm-pack-plugin": "^1.5.0",
         "babel-eslint": "^10.1.0",
+        "babel-runtime": "^6.26.0",
         "eslint": "^6.7.2",
-        "eslint-plugin-vue": "^7.0.0"
+        "eslint-plugin-vue": "^7.0.0",
+        "highlight.js": "^11.2.0",
+        "markdown-it-anchor": "^8.1.2",
+        "markdown-it-highlightjs": "^3.5.0",
+        "raw-loader": "^4.0.2",
+        "vue3-tabs": "^0.1.12"
     },
     "eslintConfig": {
         "root": true,
