--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "name": "myps-web",
     "version": "0.1.0",
-    "private": true,
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -30,19 +29,12 @@
         "postcss": "^8.3.6",
         "postcss-at-rules-variables": "^0.3.0",
         "postcss-extend": "^1.0.5",
-        "postcss-import": "^14.0.2",
         "postcss-mixins": "^8.1.0",
         "postcss-nested": "^5.0.6",
         "postcss-simple-vars": "^6.0.3",
-        "postcss-variables": "^1.1.1",
         "tailwindcss": "^2.2.7",
         "vite": "^2.5.0",
         "vite-aliases": "^0.8.6",
-        "vite-plugin-markdown": "^2.0.2",
-        "vite-plugin-plain-text": "^1.1.4",
-        "vite-plugin-rsw": "^1.8.1",
-        "vmark": "^1.2.0",
-        "vmark-loader": "^1.0.0",
-        "vue3-highlightjs": "^1.0.5"
+        "vite-plugin-rsw": "^1.9.0"
     }
 }
