--- a/wasm/myps-mips/Cargo.toml
+++ b/wasm/myps-mips/Cargo.toml
@@ -30,6 +30,12 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.5", optional = true }
 itertools = "0.9.0"
 
+[dependencies.web-sys]
+version = "0.3.44"
+features = [
+  "console",
+]
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
